# rustvideoplatform-processor

./: Cargo.toml  Dockerfile  README.md  config.json.example  generate_missing_showcases.sh
.github/workflows/: ci.yml  docker-image.yml
.sqlx/: query-4e69578f28b9386d371500ffcb3e4417e2510c8c95bd517d356153b77d7da672.json  query-6677199bda42ff0f8995b14561e46ecbf8106e3a14f29613dab12aa7453bb870.json
src/: db.rs  main.rs
